ecmascript/parser/tests/test262-error-references/fail/b9422ea5edcddf0b.js.stderr
error: Legacy octal escape is not permitted in strict mode
 --> $DIR/tests/test262-parser/fail/b9422ea5edcddf0b.js:1:2
  |
1 | `\00`;
  |  ^^

